--- a/CinemaBook/Scence/Booking/BookingProductCombo/view/cell/ItemProductComboTableViewCell.xib
+++ b/CinemaBook/Scence/Booking/BookingProductCombo/view/cell/ItemProductComboTableViewCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -23,24 +24,24 @@
                             <constraint firstAttribute="width" constant="100" id="ApD-rX-xul"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TÊN MÓN COMBO" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ABD-lq-dvQ">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TÊN MÓN COMBO" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ABD-lq-dvQ">
                         <rect key="frame" x="108" y="10" width="192" height="18"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 ly nước và 1 bắp nhỏ mô tả" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IT7-8m-6v1">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 ly nước và 1 bắp nhỏ mô tả" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IT7-8m-6v1">
                         <rect key="frame" x="108" y="45" width="212" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vs8-0D-29c">
-                        <rect key="frame" x="108" y="69" width="20" height="20"/>
-                        <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vs8-0D-29c">
+                        <rect key="frame" x="108" y="69" width="30" height="30"/>
+                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="Ic5-jE-jxk"/>
-                            <constraint firstAttribute="height" constant="20" id="Ua5-rz-eUP"/>
+                            <constraint firstAttribute="width" constant="30" id="Ic5-jE-jxk"/>
+                            <constraint firstAttribute="height" constant="30" id="Ua5-rz-eUP"/>
                         </constraints>
                         <state key="normal" title="-">
                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -50,19 +51,19 @@
                                 <real key="value" value="10"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                <real key="value" value="1"/>
+                                <real key="value" value="0.0"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                         <connections>
-                            <action selector="btn_incease:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="AK3-RJ-ScH"/>
+                            <action selector="btn_incease:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="5fQ-r5-7QH"/>
                         </connections>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ERv-sv-0eh">
-                        <rect key="frame" x="164" y="69" width="20" height="20"/>
-                        <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ERv-sv-0eh">
+                        <rect key="frame" x="174" y="69" width="30" height="30"/>
+                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="Ijb-yu-tlt"/>
-                            <constraint firstAttribute="height" constant="20" id="Tvk-eZ-cTy"/>
+                            <constraint firstAttribute="width" constant="30" id="Ijb-yu-tlt"/>
+                            <constraint firstAttribute="height" constant="30" id="Tvk-eZ-cTy"/>
                         </constraints>
                         <state key="normal" title="+">
                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -72,22 +73,22 @@
                                 <real key="value" value="10"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                <real key="value" value="1"/>
+                                <real key="value" value="0.0"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                         <connections>
-                            <action selector="btn_includenumber:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="FmC-xg-c9x"/>
+                            <action selector="btn_includenumber:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="iQp-n9-Yxj"/>
                         </connections>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Bi-bh-tAf">
                         <rect key="frame" x="0.0" y="99" width="320" height="1"/>
-                        <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="VPV-xO-IJz"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CXR-EC-hPn">
-                        <rect key="frame" x="136" y="69" width="20" height="20"/>
+                        <rect key="frame" x="146" y="74" width="20" height="20"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogy-da-A5n">
                                 <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -103,12 +104,12 @@
                                         <real key="value" value="1"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                        <color key="value" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="value" systemColor="systemGray6Color"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="pNH-iZ-Nco"/>
                             <constraint firstAttribute="width" constant="20" id="vVi-9Y-yTY"/>
@@ -131,7 +132,7 @@
                     <constraint firstItem="cL0-jJ-IXW" firstAttribute="leading" secondItem="cST-p9-sub" secondAttribute="trailing" constant="8" id="Dl4-Zc-Bzn"/>
                     <constraint firstAttribute="trailing" secondItem="3Bi-bh-tAf" secondAttribute="trailing" id="Noi-8G-TxS"/>
                     <constraint firstItem="ABD-lq-dvQ" firstAttribute="leading" secondItem="cST-p9-sub" secondAttribute="trailing" constant="8" id="OLb-b9-W0a"/>
-                    <constraint firstItem="CXR-EC-hPn" firstAttribute="top" secondItem="IT7-8m-6v1" secondAttribute="bottom" constant="8" id="UoN-eL-wYf"/>
+                    <constraint firstItem="CXR-EC-hPn" firstAttribute="top" secondItem="IT7-8m-6v1" secondAttribute="bottom" constant="13" id="UoN-eL-wYf"/>
                     <constraint firstAttribute="bottom" secondItem="3Bi-bh-tAf" secondAttribute="bottom" id="YDB-41-Ffe"/>
                     <constraint firstItem="cST-p9-sub" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Yc3-nd-2ER"/>
                     <constraint firstItem="CXR-EC-hPn" firstAttribute="leading" secondItem="vs8-0D-29c" secondAttribute="trailing" constant="8" id="cpI-GH-9hR"/>
@@ -144,9 +145,11 @@
                     <constraint firstItem="vs8-0D-29c" firstAttribute="top" secondItem="IT7-8m-6v1" secondAttribute="bottom" constant="8" id="smB-Y5-Jhv"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="btn_descrease" destination="vs8-0D-29c" id="1ei-c2-iRx"/>
+                <outlet property="btn_inscrease" destination="ERv-sv-0eh" id="KeC-w9-5Fb"/>
                 <outlet property="image_combo" destination="cST-p9-sub" id="5aS-M7-Rcj"/>
                 <outlet property="lbl_desscription" destination="IT7-8m-6v1" id="EB3-bU-fCX"/>
                 <outlet property="lbl_name" destination="ABD-lq-dvQ" id="kWy-yi-I0F"/>
@@ -158,5 +161,11 @@
     </objects>
     <resources>
         <image name="PORNCORN-TEST" width="546" height="546"/>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
