--- a/CinemaBook/Scence/Home/view/cell/section4/cellsection/FlimsCollectionViewCell.xib
+++ b/CinemaBook/Scence/Home/view/cell/section4/cellsection/FlimsCollectionViewCell.xib
@@ -68,6 +68,23 @@
                 <constraint firstAttribute="trailing" secondItem="XQa-Ff-GdQ" secondAttribute="trailing" id="vEs-aL-ehQ"/>
             </constraints>
             <size key="customSize" width="232" height="164"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                    <real key="value" value="10"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                    <real key="value" value="5"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                    <real key="value" value="5"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                    <size key="value" width="5" height="5"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                    <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="image_poster" destination="oad-O2-WsO" id="bXw-rF-lt7"/>
             </connections>
