--- a/CinemaBook/Scence/Home/view/HomeViewController.xib
+++ b/CinemaBook/Scence/Home/view/HomeViewController.xib
@@ -18,7 +18,6 @@
             <connections>
                 <outlet property="avatar" destination="hcb-62-GwD" id="6l6-Ra-J5J"/>
                 <outlet property="lbl_name_account" destination="6ly-WZ-Dbr" id="0ug-qd-Dak"/>
-                <outlet property="lbl_price_point" destination="u4b-MK-RxH" id="nnS-aD-06T"/>
                 <outlet property="tableView" destination="vVx-X6-bnx" id="iUk-Fg-iLI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="view_detail" destination="620-D7-xZg" id="VRS-xL-cNs"/>
@@ -53,52 +52,34 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </imageView>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ticket-2" translatesAutoresizingMaskIntoConstraints="NO" id="AS3-bT-AeP">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tickets" translatesAutoresizingMaskIntoConstraints="NO" id="AS3-bT-AeP">
                                     <rect key="frame" x="364" y="15" width="30" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="30" id="PrK-3C-kHa"/>
                                         <constraint firstAttribute="height" constant="30" id="f5B-3u-R8U"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Xin chào, Nguyễn Xuân Tiến Dũng" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ly-WZ-Dbr">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Xin chào, Nguyễn Xuân Tiến Dũng" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ly-WZ-Dbr">
                                     <rect key="frame" x="78" y="8" width="250" height="14.5"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="250" id="g4S-fU-S63"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="12"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bitcoinsign.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Jp9-qH-MqZ">
-                                    <rect key="frame" x="78" y="23" width="22" height="21"/>
-                                    <color key="tintColor" systemColor="systemYellowColor"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="22" id="2nq-35-qsO"/>
-                                        <constraint firstAttribute="height" constant="22" id="ojh-5w-QrO"/>
-                                    </constraints>
-                                </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1,000,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4b-MK-RxH">
-                                    <rect key="frame" x="100" y="25.5" width="56.5" height="14.5"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                    <color key="textColor" systemColor="systemYellowColor"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="hcb-62-GwD" firstAttribute="leading" secondItem="620-D7-xZg" secondAttribute="leading" constant="20" id="141-e6-Guv"/>
-                                <constraint firstItem="Jp9-qH-MqZ" firstAttribute="top" secondItem="6ly-WZ-Dbr" secondAttribute="bottom" id="3BH-cO-KAx"/>
                                 <constraint firstAttribute="trailing" secondItem="AS3-bT-AeP" secondAttribute="trailing" constant="20" id="4q6-kJ-Mf4"/>
-                                <constraint firstItem="u4b-MK-RxH" firstAttribute="leading" secondItem="Jp9-qH-MqZ" secondAttribute="trailing" id="7WD-wf-emw"/>
                                 <constraint firstAttribute="height" constant="60" id="Im8-fS-zC2"/>
-                                <constraint firstItem="u4b-MK-RxH" firstAttribute="top" secondItem="6ly-WZ-Dbr" secondAttribute="bottom" constant="3" id="OXd-Nm-T8p"/>
                                 <constraint firstAttribute="height" relation="lessThanOrEqual" constant="60" id="SAN-yl-TbZ"/>
                                 <constraint firstItem="6ly-WZ-Dbr" firstAttribute="leading" secondItem="hcb-62-GwD" secondAttribute="trailing" constant="8" id="WBp-kl-9um"/>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="ZPC-rR-fXV"/>
                                 <constraint firstItem="6ly-WZ-Dbr" firstAttribute="top" secondItem="620-D7-xZg" secondAttribute="top" constant="8" id="cUE-kr-Ndl"/>
                                 <constraint firstItem="hcb-62-GwD" firstAttribute="centerY" secondItem="620-D7-xZg" secondAttribute="centerY" id="cdA-5A-VnX"/>
                                 <constraint firstItem="AS3-bT-AeP" firstAttribute="centerY" secondItem="620-D7-xZg" secondAttribute="centerY" id="eU0-0T-jBc"/>
-                                <constraint firstItem="Jp9-qH-MqZ" firstAttribute="leading" secondItem="hcb-62-GwD" secondAttribute="trailing" constant="8" id="yDd-Fm-BmR"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
@@ -111,19 +92,22 @@
                                     <size key="value" width="1" height="1"/>
                                 </userDefinedRuntimeAttribute>
                                 <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
-                                    <color key="value" systemColor="systemGray4Color"/>
+                                    <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="0.0"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vVx-X6-bnx">
-                            <rect key="frame" x="0.0" y="65" width="414" height="749"/>
+                            <rect key="frame" x="0.0" y="60" width="414" height="754"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
                         </tableView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color"/>
                     <constraints>
                         <constraint firstItem="620-D7-xZg" firstAttribute="top" secondItem="vec-iT-mKk" secondAttribute="top" id="2Ju-VW-Uht"/>
-                        <constraint firstItem="vVx-X6-bnx" firstAttribute="top" secondItem="620-D7-xZg" secondAttribute="bottom" constant="5" id="AHO-Ip-zEY"/>
+                        <constraint firstItem="vVx-X6-bnx" firstAttribute="top" secondItem="620-D7-xZg" secondAttribute="bottom" id="AHO-Ip-zEY"/>
                         <constraint firstAttribute="bottom" secondItem="vVx-X6-bnx" secondAttribute="bottom" id="Cue-g8-RHp"/>
                         <constraint firstItem="620-D7-xZg" firstAttribute="leading" secondItem="vec-iT-mKk" secondAttribute="leading" id="LJj-eD-frE"/>
                         <constraint firstAttribute="trailing" secondItem="vVx-X6-bnx" secondAttribute="trailing" id="XPh-Vb-GRS"/>
@@ -145,16 +129,9 @@
     </objects>
     <resources>
         <image name="avatar-admin" width="672" height="1536"/>
-        <image name="bitcoinsign.circle.fill" catalog="system" width="128" height="123"/>
-        <image name="ticket-2" width="512" height="512"/>
-        <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="tickets" width="512" height="512"/>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
