--- a/CinemaBook/Scence/Home/view/cell/section3/cellsection/itemTraillerCollectionViewCell.xib
+++ b/CinemaBook/Scence/Home/view/cell/section3/cellsection/itemTraillerCollectionViewCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,7 +20,7 @@
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xJN-Bn-eqJ" customClass="YTPlayerView">
                         <rect key="frame" x="0.0" y="0.0" width="200" height="130"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="130" id="B3J-1K-Kgn"/>
                         </constraints>
@@ -42,7 +43,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Myg-Xj-yWa" firstAttribute="top" secondItem="v41-Cu-hYO" secondAttribute="top" constant="5" id="N1V-hI-9wV"/>
                             <constraint firstAttribute="trailing" secondItem="Myg-Xj-yWa" secondAttribute="trailing" id="htf-PZ-FoE"/>
@@ -51,6 +52,7 @@
                     </view>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="v41-Cu-hYO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="2di-WX-zeH"/>
                 <constraint firstItem="xJN-Bn-eqJ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Lmx-Em-Aec"/>
@@ -60,7 +62,6 @@
                 <constraint firstAttribute="trailing" secondItem="xJN-Bn-eqJ" secondAttribute="trailing" id="lce-H0-7hp"/>
                 <constraint firstAttribute="trailing" secondItem="v41-Cu-hYO" secondAttribute="trailing" id="zsO-KB-ONG"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <userDefinedRuntimeAttributes>
                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                     <real key="value" value="10"/>
@@ -79,4 +80,14 @@
             <point key="canvasLocation" x="131.8840579710145" y="83.705357142857139"/>
         </collectionViewCell>
     </objects>
+    <designables>
+        <designable name="Myg-Xj-yWa">
+            <size key="intrinsicContentSize" width="69.5" height="17"/>
+        </designable>
+    </designables>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
