--- a/CinemaBook/Scence/Home/view/cell/section5/CategoryFunctionMoreTableViewCell.xib
+++ b/CinemaBook/Scence/Home/view/cell/section5/CategoryFunctionMoreTableViewCell.xib
@@ -19,10 +19,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ag6-Cw-ncv">
-                        <rect key="frame" x="0.0" y="0.0" width="370" height="150"/>
+                        <rect key="frame" x="0.0" y="5" width="370" height="140"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uRl-0y-6GQ">
-                                <rect key="frame" x="0.0" y="0.0" width="123.33333333333333" height="150"/>
+                                <rect key="frame" x="0.0" y="0.0" width="123.33333333333333" height="140"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shops" translatesAutoresizingMaskIntoConstraints="NO" id="YoZ-AY-X9B">
                                         <rect key="frame" x="31.666666666666671" y="20" width="60" height="60"/>
@@ -32,10 +32,10 @@
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="30"/>
+                                                <real key="value" value="0.0"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                <real key="value" value="1"/>
+                                                <real key="value" value="0.0"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
@@ -49,7 +49,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FNw-i2-D01">
-                                        <rect key="frame" x="0.0" y="0.0" width="123.33333333333333" height="150"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="123.33333333333333" height="140"/>
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
@@ -71,7 +71,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mwm-3g-nCo">
-                                <rect key="frame" x="123.33333333333334" y="0.0" width="123.33333333333334" height="150"/>
+                                <rect key="frame" x="123.33333333333334" y="0.0" width="123.33333333333334" height="140"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cinema" translatesAutoresizingMaskIntoConstraints="NO" id="42G-Z4-ErX">
                                         <rect key="frame" x="31.666666666666671" y="20" width="60" height="60"/>
@@ -81,10 +81,10 @@
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="30"/>
+                                                <real key="value" value="0.0"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                <real key="value" value="1"/>
+                                                <real key="value" value="0.0"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
@@ -107,7 +107,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WVm-jP-rk7">
-                                <rect key="frame" x="246.66666666666666" y="0.0" width="123.33333333333334" height="150"/>
+                                <rect key="frame" x="246.66666666666666" y="0.0" width="123.33333333333334" height="140"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-insterest" translatesAutoresizingMaskIntoConstraints="NO" id="MZd-wN-tvA">
                                         <rect key="frame" x="31.666666666666657" y="20" width="60" height="60"/>
@@ -117,10 +117,10 @@
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="30"/>
+                                                <real key="value" value="0.0"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                <real key="value" value="1"/>
+                                                <real key="value" value="0.0"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
@@ -146,13 +146,14 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="ag6-Cw-ncv" secondAttribute="bottom" id="Fjb-sL-jqd"/>
-                    <constraint firstItem="ag6-Cw-ncv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="LAA-Wl-IUX"/>
+                    <constraint firstAttribute="bottom" secondItem="ag6-Cw-ncv" secondAttribute="bottom" constant="5" id="Fjb-sL-jqd"/>
+                    <constraint firstItem="ag6-Cw-ncv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="LAA-Wl-IUX"/>
                     <constraint firstItem="ag6-Cw-ncv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="O8r-Pg-1AM"/>
                     <constraint firstAttribute="trailing" secondItem="ag6-Cw-ncv" secondAttribute="trailing" id="vKs-Eu-py4"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" systemColor="systemGray6Color"/>
             <point key="canvasLocation" x="-18.320610687022899" y="-12.67605633802817"/>
         </tableViewCell>
     </objects>
@@ -162,6 +163,9 @@
         <image name="shops" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
